--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,11 +5,17 @@
           <div class="col-lg-4 mx-auto">
             <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
             <div class="auto-form-wrapper">
-              <form action="#">
+
+              <form [formGroup]="loginForm" (ngSubmit)="loginUser()">
+
                 <div class="form-group">
                   <label class="label">Usuario</label>
                   <div class="input-group">
-                    <input type="email" class="form-control" placeholder="Email">
+                    <input 
+                      formControlName="correo"
+                      type="email" 
+                      class="form-control" 
+                      placeholder="Email">
                     <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
@@ -17,10 +23,15 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="form-group">
                   <label class="label">Contraseña</label>
                   <div class="input-group">
-                    <input type="password" class="form-control" placeholder="*********">
+                    <input 
+                      formControlName="password" 
+                      type="password" 
+                      class="form-control" 
+                      placeholder="*********">
                     <div class="input-group-append">
                       <span class="input-group-text">
                         <i class="fa fa-check-circle"></i>
@@ -28,8 +39,12 @@
                     </div>
                   </div>
                 </div>
+
                 <div class="form-group">
-                  <button class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button
+                    [disabled]="loginForm.invalid" 
+                    type="submit"
+                    class="btn btn-primary submit-btn btn-block">Login</button>
                 </div>
                 
                 
